--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,8 @@
 set -g prefix C-a
 unbind C-b
 
+set-option -g default-shell /bin/zsh
+
 set -sg escape-time 1
 set -g base-index 1
 #setw -g pane-base-index 1
