--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,10 +62,17 @@ set -g status-right "#[fg=cyan]%d %b %R"
 set -g status-interval 30
 set -g status-justify centre
 
-# In 'copy' mode 'Ctrl-a [' we can use vi keys to move around
-set -g mode-keys vi
-
 # Log output to a text file on demand
 bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
 
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
