Removing the cursorline from vim, making tmux start with zsh.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,8 @@
 unbind C-b
 set -g prefix C-a
 
+set-option -g default-shell $SHELL
+
 # However, some people complain about this, so we'll also add a few
 # bindings that let you quickly select the binding you want.
 # You can add your own to ~/.tmux.conf.local (see bottom of file).
