Adding some key-related items.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # First things first:  Remap the prefix key to reduce conflicts with Emacs!
 unbind C-b
-set -g prefix C-a
+set -g prefix C-f
 
 set-option -g default-shell $SHELL
 
@@ -80,22 +80,19 @@ bind -r L resize-pane -R 5
 # Renumber windows
 bind m command-prompt -p "move window to:"  "move-window -t '%%'"
 
-
-
-
 ##### Colors #####
 # Ensure we're using 256 colors
 set -g default-terminal "xterm"
 
 # Status bar
 set -g status-fg white
-set -g status-bg "#333333"
+set -g status-bg black
 
 # Window list
-setw -g window-status-fg green
+setw -g window-status-fg white
 setw -g window-status-bg default
 setw -g window-status-attr dim
-setw -g window-status-current-fg green
+setw -g window-status-current-fg black
 setw -g window-status-current-bg white
 setw -g window-status-current-attr bright
 
@@ -113,7 +110,7 @@ set -g message-attr bright
 # Status Bar Items
 set -g status-utf8 on
 set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=green]#P"
+set -g status-left "#[fg=green]#S #[fg=yellow]#I #[fg=green]#P"
 set -g status-right "#[fg=yellow]%d %b %R #[fg=green]#(wemux status_users)"
 set -g status-justify centre
 set -g status-interval 15
