Add some mouse handling to tmux, get rid of this haskell bit.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,8 +39,11 @@ set -sg repeat-time 1000
 # (Note: turning on mouse support seems to make it impossible to use the
 # mouse to copy text into the system clipboard. Surely there's a way
 # around this if I ever feel like shaving that yak. -JW)
-setw -g mode-mouse off
+# setw -g mode-mouse off
 
+set-window-option -g mode-mouse on
+set-option -g mouse-select-pane on
+set-option -g mouse-select-window on
 
 
 ##### Scrollback Navigation #####
@@ -85,16 +88,14 @@ bind m command-prompt -p "move window to:"  "move-window -t '%%'"
 set -g default-terminal "xterm"
 
 # Status bar
-set -g status-fg white
-set -g status-bg black
+set -g status-fg black
+set -g status-bg green
 
 # Window list
-setw -g window-status-fg white
+setw -g window-status-fg black
 setw -g window-status-bg default
-setw -g window-status-attr dim
-setw -g window-status-current-fg black
-setw -g window-status-current-bg white
-setw -g window-status-current-attr bright
+setw -g window-status-current-fg white
+setw -g window-status-current-bg black
 
 # Pane borders
 set -g pane-border-fg green
@@ -110,14 +111,17 @@ set -g message-attr bright
 # Status Bar Items
 set -g status-utf8 on
 set -g status-left-length 40
-set -g status-left "#[fg=green]#S #[fg=yellow]#I #[fg=green]#P"
-set -g status-right "#[fg=yellow]%d %b %R #[fg=green]#(wemux status_users)"
+set -g status-left "#[fg=white,bold]#S #[fg=white,bold]#I #[fg=white,bold]#P "
+set -g status-right "#[fg=black]%d-%b %R "
 set -g status-justify centre
-set -g status-interval 15
+set -g status-interval 5
 
 # Monitor windows for activity
 setw -g monitor-activity on
 set -g visual-activity on
 
 ##### Local Settings #####
-source-file ~/.tmux.conf.local
+# source-file ~/.tmux.conf.local
+#
+# if run as "tmux attach", create a session if one does not already exist
+new-session -n $HOST
