Bunch of changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -125,3 +125,9 @@ set -g visual-activity on
 #
 # if run as "tmux attach", create a session if one does not already exist
 new-session -n $HOST
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+run '~/.tmux/plugins/tpm/tpm'
