Tweak the mouse settings and terminal handling.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,20 +31,8 @@ set -sg escape-time 1
 # Extend the repeat interval for repeatable commands (e.g., resize-pane)
 set -sg repeat-time 1000
 
-
-
-##### Mouse Support (or lack thereof) #####
-
-# No mouse for you!
-# (Note: turning on mouse support seems to make it impossible to use the
-# mouse to copy text into the system clipboard. Surely there's a way
-# around this if I ever feel like shaving that yak. -JW)
-# setw -g mode-mouse off
-
-set-window-option -g mode-mouse on
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
-
+# Let's use a mouse sometimes
+set-option -g mouse on
 
 ##### Scrollback Navigation #####
 
@@ -85,7 +73,7 @@ bind m command-prompt -p "move window to:"  "move-window -t '%%'"
 
 ##### Colors #####
 # Ensure we're using 256 colors
-set -g default-terminal "xterm"
+set-option -g default-terminal "screen-256color"
 
 # Status bar
 set -g status-fg black
@@ -109,7 +97,6 @@ set -g message-bg black
 set -g message-attr bright
 
 # Status Bar Items
-set -g status-utf8 on
 set -g status-left-length 40
 set -g status-left "#[fg=white,bold]#S #[fg=white,bold]#I #[fg=white,bold]#P "
 set -g status-right "#[fg=black]%d-%b %R "
