--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,19 +4,16 @@ set -g prefix C-f
 
 set-option -g default-shell $SHELL
 
-# However, some people complain about this, so we'll also add a few
-# bindings that let you quickly select the binding you want.
-# You can add your own to ~/.tmux.conf.local (see bottom of file).
-#
-# These lines take the form:
-# bind A set -g prefix 'C-a' \; bind 'C-a' send-prefix
-#        \_________________/    \____________________/
-# The first command sets C-a as the prefix.
-# The second command allows the prefix keystroke to be sent to the
-# active pane (in case the binding overrides something that was useful).
-# bind A set -g prefix 'C-a' \; bind 'C-a' send-prefix
-# bind T set -g prefix 'C-t' \; bind 'C-t' send-prefix
-# bind \ set -g prefix 'C-\' \; bind 'C-\' send-prefix
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Reload tmux config so we can pick up changes to this file without needing to restart tmux
 bind r source-file ~/.tmux.conf \; display "Reloaded tmux configuration!"
@@ -107,14 +104,11 @@ set -g status-interval 5
 setw -g monitor-activity on
 set -g visual-activity on
 
-##### Local Settings #####
-# source-file ~/.tmux.conf.local
-#
-# if run as "tmux attach", create a session if one does not already exist
-new-session -n $HOST
-
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-
-run '~/.tmux/plugins/tpm/tpm'
+# Smart pane switching with awareness of vim splits
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
