Remove the tmux-prefixed pane movements because I'm using tmux-navigator to use my standard vim split movement keys to navigate across panes and splits.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,10 +47,10 @@ bind | split-window -h # horizontal columns
 bind - split-window -v # vertical rows
 
 # Navigate panes vim-style!
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# bind h select-pane -L
+# bind j select-pane -D
+# bind k select-pane -U
+# bind l select-pane -R
 
 # And windows too!
 bind -r C-l select-window -t :+
