--- a/.tmux.conf
+++ b/.tmux.conf
@@ -112,3 +112,6 @@ bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+# Break out the current pane into a new session based on the current directory
+bind-key C-b send-keys '~/tat && exit' 'C-m'
