--- a/.tmux.conf
+++ b/.tmux.conf
@@ -115,3 +115,6 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Break out the current pane into a new session based on the current directory
 bind-key C-b send-keys '~/tat && exit' 'C-m'
+
+# Kill the current session
+bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
