Tweak tmux to not allow window renaming.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -115,3 +115,6 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Break out the current pane into a new session based on the current directory
 bind-key C-b send-keys '~/tat && exit' 'C-m'
+
+# Don't let new processes rename the window
+set-option -g allow-rename off
