--- a/.tmux.conf
+++ b/.tmux.conf
@@ -120,4 +120,6 @@ bind-key C-b send-keys '~/tat && exit' 'C-m'
 set-option -g allow-rename off
 
 # Kill the current session
-bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
+# bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
+
+
