--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,7 @@ unbind C-b
 set -g prefix C-f
 
 set-option -g default-shell $SHELL
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
