Add a new transliteration for vim and a smartlog line for git.

--- a/.gitconfig
+++ b/.gitconfig
@@ -5,6 +5,7 @@
     l = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
     uncommit = reset --soft HEAD^
     unstage = reset
+    smartlog = log --graph --pretty=format:'commit: %C(bold red)%h%Creset %C(red)<%H>%Creset %C(bold magenta)%d %Creset%ndate: %C(bold yellow)%cd %Creset%C(yellow)%cr%Creset%nauthor: %C(bold blue)%an%Creset %C(blue)<%ae>%Creset%n%C(cyan)%s%n%Creset'
 [user]
     name = Troy Denkinger
     email = tdenkinger@gmail.com
