--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,12 +9,12 @@ set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 setw -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# unbind -t vi-copy Enter
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Reload tmux config so we can pick up changes to this file without needing to restart tmux
 bind r source-file ~/.tmux.conf \; display "Reloaded tmux configuration!"
