Add line to allow the cursor shape to be controlled within vim.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,6 +26,7 @@ setw -g pane-base-index 1
 
 # Reduce the command delay time to something a bit shorter
 set -sg escape-time 1
+
 # Extend the repeat interval for repeatable commands (e.g., resize-pane)
 set -sg repeat-time 1000
 
@@ -107,12 +108,18 @@ set -g visual-activity on
 
 # Smart pane switching with awareness of vim splits
 # See: https://github.com/christoomey/vim-tmux-navigator
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind-key -T copy-mode-vi C-h select-pane -L
+bind-key -T copy-mode-vi C-j select-pane -D
+bind-key -T copy-mode-vi C-k select-pane -U
+bind-key -T copy-mode-vi C-l select-pane -R
+bind-key -T copy-mode-vi C-\ select-pane -l
 
 # Break out the current pane into a new session based on the current directory
 bind-key C-b send-keys '~/tat && exit' 'C-m'
@@ -120,5 +127,5 @@ bind-key C-b send-keys '~/tat && exit' 'C-m'
 # Don't let new processes rename the window
 set-option -g allow-rename off
 
-# Kill the current session
-# bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
+# Allows the cursor shape to change in vim running inside tmux
+set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
