Increaes the font size and change the font.

--- a/kitty.conf
+++ b/kitty.conf
@@ -1,5 +1,5 @@
-font_size 14.0
-font_family Monaco
+font_size 16.0
+font_family Menlo
 copy_on_select yes
 rectangle_select_modifiers ctrl+alt
 mouse_hide_wait 3.0
